# demo

./: README.md
coredump/c/: README.md  coredump_c.c
coredump/esp32/: README.md  partitions.csv  sdkconfig
cpp/hello/: CMakeLists.txt  hello.cpp
crash/Cortex-M/: README.md
crash/c/: README.md  crash_c.c
crash/cpp/: README.md  crash_cpp.cpp
crash/esp32/: CMakeLists.txt  README.md  sdkconfig
crash/esp32/main/: CMakeLists.txt  main.cpp
crash/godot/: README.md
crash/log/: README.MD  log.c
